--- a/src/main/resources/static/css/input.css
+++ b/src/main/resources/static/css/input.css
@@ -4,6 +4,7 @@
 
 :root {
   --color-bg: #1f1f2e;
+  --color-bg-alt: #0F0F1A;
   --color-container: #29293d;
   --color-input: #2b2b40;
   --color-input-focus: #33334d;
