--- a/src/main/resources/static/css/settings.css
+++ b/src/main/resources/static/css/settings.css
@@ -556,6 +556,7 @@ video {
 
 :root {
   --color-bg: #1f1f2e;
+  --color-bg-alt: #0F0F1A;
   --color-container: #29293d;
   --color-input: #2b2b40;
   --color-input-focus: #33334d;
